<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/MC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="348dp"
        android:fontFamily="@font/abhaya_libre_medium"
        android:text="@string/MC"
        android:textColor="@color/green"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/priseEstate"
        android:layout_width="165sp"
        android:layout_height="50sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="@font/abhaya_libre_medium"
        android:textColor="@color/green"
        android:hint="@string/priseEstate"
        android:inputType="number"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MC" />

    <EditText
        android:id="@+id/initialPayment"
        android:layout_width="165sp"
        android:layout_height="50sp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:fontFamily="@font/abhaya_libre_medium"
        android:textColor="@color/green"
        android:hint="@string/initialPayment"
        android:inputType="number"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MC" />

    <EditText
        android:id="@+id/interestRate"
        android:layout_width="165sp"
        android:layout_height="50sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:textColor="@color/green"
        android:textSize="11sp"
        android:fontFamily="@font/abhaya_libre_medium"
        android:inputType="number"
        android:hint="@string/interestRate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priseEstate" />

    <EditText
        android:id="@+id/term"
        android:layout_width="165sp"
        android:layout_height="50sp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:textColor="@color/green"
        android:textSize="11sp"
        android:fontFamily="@font/abhaya_libre_medium"
        android:inputType="number"
        android:hint="@string/term"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/initialPayment" />

    <Button
        android:id="@+id/learn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple"
        android:text="@string/learn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MC"
        app:layout_constraintVertical_bias="0.932" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="204dp"
        android:layout_height="119dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />
</androidx.constraintlayout.widget.ConstraintLayout>